fix(overview-card): update markup to handle min-height change for tag (#1305)

--- a/src/components/OverviewCard/overview-card.scss
+++ b/src/components/OverviewCard/overview-card.scss
@@ -21,6 +21,13 @@
   }
 }
 
+.overview-card__info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: fit-content;
+}
+
 .overview-card__title {
   @include carbon--type-style("caption-01");
   text-decoration: none;
