Codesandbox examples for charting demos (#987)
* initial effort

* add dynamic demos to basic charts

* update charting package version, optimize demo components

* fix lint error

* update @carbon/charts to 0.32.3

* add image alt tags to dataviz chart types page

* update yarn.lock

* fix styling issues

* styling fixes

* undo overview-card tag height change

* move resources below anchor links for basic charts page

* final touch on CodeBar

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/data-visualization/data-visualization.scss
+++ b/src/pages/data-visualization/data-visualization.scss
@@ -1,12 +1,15 @@
-div.chart-holder {
+div.chart-demo-wrapper {
   background: $carbon--white-0;
-  padding: rem(30px);
+  margin-bottom: rem(60px);
 
-  @include carbon--breakpoint("md") {
-    width: 75% !important;
+  div.chart-demo {
+    padding: rem(30px);
   }
+}
 
-  @include carbon--breakpoint("lg") {
-    width: 66.667% !important;
-  }
+.dataviz-copy {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0;
 }
