chore: tweak initial banner render

--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -38,3 +38,20 @@
   color: $text-04;
   @include carbon--type-style("body-short-01");
 }
+
+.full-name {
+  display: none;
+}
+
+.initialism {
+  display: inline;
+}
+
+@include carbon--breakpoint("md") {
+  .full-name {
+    display: inline;
+  }
+  .initialism {
+    display: none;
+  }
+}
