feat: add sequential color palette initial

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 
 @import "src/components/ColorBlock/color-block.scss";
 @import "src/components/ColorGrid/color-grid.scss";
+@import "src/components/ColorPalette/color-palette.scss";
 @import "src/components/ColorTokenTable/color-token-table.scss";
 @import "src/components/ComponentOverview/component-overview.scss";
 @import "src/components/ComponentStatus/component-status.scss";
