--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -7,6 +7,7 @@
   column-gap: 1px;
   row-gap: 1px;
   width: 66.66%;
+  margin-bottom: 1px;
 
   @include carbon--breakpoint-down("md") {
     width: 100%;
@@ -17,10 +18,6 @@
   }
 }
 
-.palette-controls .bx--dropdown__wrapper {
-  //   border-left: 1px solid $ui-03;
-}
-
 .palette-controls .bx--dropdown {
   border-bottom: none;
 }
@@ -28,7 +25,6 @@
 //SWITCHER
 .palette-switcher {
   height: 3rem;
-  padding-bottom: 1px;
 }
 
 .palette-switcher .bx--content-switcher-btn {
@@ -73,7 +69,16 @@
 // DARK MODE
 .dark-mode .color-palette-color {
   outline: 1px solid black;
-  outline-offset: -1px;
+}
+
+.dark-mode .group-container {
+  background-color: black;
+  outline: 1px solid black;
+}
+
+.dark-mode .group-container .color-palette-color {
+  outline: none;
+  border-bottom: 1px solid black;
 }
 
 .dark-mode .group-option {
@@ -81,7 +86,21 @@
   color: var(--cds-inverse-01, #ffffff);
 }
 
+.dark-mode .group-container + .group-container .group-option::before {
+  background-color: $icon-02;
+}
+
+.group-controls.dark-controls {
+  background-color: $icon-02;
+  border-bottom: 1px solid $icon-02;
+}
+
 // GROUP
+.group-controls {
+  background-color: $ui-03;
+  border-bottom: 1px solid $ui-03;
+}
+
 .group-container .color-palette-color {
   border-bottom: 1px solid $ui-03;
 
@@ -97,6 +116,35 @@
   align-content: center;
   font-size: 12px;
   font-weight: 600;
+  position: relative;
+}
+
+// responsive group option dividers
+.group-container + .group-container .group-option::before {
+  position: absolute;
+  content: "";
+  width: 1px;
+  height: calc(100% + 1px);
+  top: -1px;
+  left: -1px;
+  background-color: $ui-03;
+
+  @include carbon--breakpoint-down("sm") {
+    display: none; //all indiv rows, so don't need a left "border"
+  }
+}
+
+.group-container + .group-container:nth-child(4) .group-option::before {
+  @include carbon--breakpoint-up("md") {
+    display: none; //4 starts a new row, so it doesn't need a left "border"
+  }
+}
+
+.group-container + .group-container:nth-child(3) .group-option::before,
+.group-container + .group-container:nth-child(5) .group-option::before {
+  @include carbon--breakpoint-between("sm", "md") {
+    display: none; // 3/5 start a new row, so it don't need a left "border"
+  }
 }
 
 // SEQUENTIAL
@@ -121,7 +169,6 @@
 }
 
 .sequential:last-of-type {
-  box-shadow: 0 -1px white; //border-top doesn't work correctly
   border-left: 1px solid white;
 }
 
