feat: add alert colors

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -52,6 +52,16 @@
   }
 }
 
+.palettes-container.alert-container {
+  width: 66.66%;
+  grid-template-columns: 1fr 1fr;
+
+  @include carbon--breakpoint-down("sm") {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
+
 // COLOR
 .color-palette-color {
   height: 3rem;
