fix: dropdown divider

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -18,8 +18,24 @@
   }
 }
 
+.group-controls {
+  border-bottom: 1px solid $ui-03;
+}
+
+.group-controls.dark-controls {
+  border-bottom: 1px solid $icon-02;
+}
+
+.group-controls .bx--dropdown__wrapper {
+  box-shadow: -2px 0px 0px 0px $ui-03; // adds left divider
+}
+
+.group-controls.dark-controls .bx--dropdown__wrapper {
+  box-shadow: -2px 0px 0px 0px solid $icon-02;
+}
+
 .palette-controls .bx--dropdown {
-  border-bottom: none;
+  border-bottom: none; //removes carbon border
 }
 
 //SWITCHER
@@ -100,17 +116,7 @@
   background-color: $icon-02;
 }
 
-.group-controls.dark-controls {
-  background-color: $icon-02;
-  border-bottom: 1px solid $icon-02;
-}
-
 // GROUP
-.group-controls {
-  background-color: $ui-03;
-  border-bottom: 1px solid $ui-03;
-}
-
 .group-container .color-palette-color {
   border-bottom: 1px solid $ui-03;
 
