feat: add copy functionality

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -85,7 +85,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 0 0.5rem 0 1rem;
+}
+
+.color-palette-color div {
+  display: flex;
+  align-items: center;
 }
 
 .light-text {
@@ -318,4 +323,22 @@
     #022b30,
     #081a1c
   );
+}
+
+// COPY BUTTON
+
+// .palette-copy {
+//   z-index: none;
+// }
+
+// .palette-copy .bx--copy-btn__feedback {
+//   z-index: 5000;
+// }
+
+// .palette-copy.bx--copy-btn::before {
+//   z-index: 5000;
+// }
+
+.light-copy svg {
+  fill: white;
 }
