fix: copy hover styles

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -327,9 +327,10 @@
 
 // COPY BUTTON
 
-// .palette-copy {
-//   z-index: none;
-// }
+.palette-copy,
+.palette-copy:hover {
+  background-color: transparent;
+}
 
 // .palette-copy .bx--copy-btn__feedback {
 //   z-index: 5000;
@@ -341,4 +342,12 @@
 
 .light-copy svg {
   fill: white;
+}
+
+.palette-copy:hover svg {
+  fill: lighten($color: #000000, $amount: 50%);
+}
+
+.light-copy:hover svg {
+  fill: darken($color: #ffffff, $amount: 50%);
 }
