added all files - still need to add styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@
 @import 'src/components/ColorGrid/color-grid.scss';
 @import 'src/components/ColorTokenTable/color-token-table.scss';
 @import 'src/components/ComponentOverview/component-overview.scss';
+@import 'src/components/ComponentIndexPage/component-index.scss';
 @import 'src/components/ComponentStatus/component-status.scss';
 @import 'src/components/GlossaryComponent/GlossaryList/glossary-list.scss';
 @import 'src/components/GlossaryComponent/GlossaryNav/glossary-nav.scss';
