feat: 1473-sprint-1-base-component-index

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -1,6 +1,10 @@
 .component-index-search {
   width: 72%;
   height: 48px;
+  .bx--search-input {
+    background-color: $carbon--white-0;
+    border-bottom: 1px solid $carbon--gray-20;
+  }
 }
 .bx--dropdown__wrapper {
   margin-top: 0px !important;
