feat: 1473-sprint-1-base-component-index - v.2

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -1,5 +1,5 @@
 .component-index-search {
-  width: 72%;
+  width: 100%;
   height: 48px;
   .bx--search-input {
     background-color: $carbon--white-0;
@@ -10,31 +10,29 @@
   margin-top: 0px !important;
 }
 .placeholder-sort {
-  width: 72%;
+  width: 100%;
   border-bottom-width: 0px;
   background-color: $carbon--white-0;
   height: 48px;
 }
-.row {
+.component-index-item {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 72%;
+  width: 100%;
   background: $carbon--white-0;
   border-bottom: 1px solid $carbon--gray-20;
 }
-.component-image-card {
+.component-index-item__image {
   display: flex;
   flex-direction: column;
   flex: 1;
   height: 11.175rem;
   display: block;
-}
-
-.index-image {
   background-color: $carbon--white-0;
 }
-.component-index-text {
+
+.component-index-item__content {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -42,7 +40,7 @@
   border-left: 1px solid $carbon--gray-20;
   background-color: $carbon--white-0;
 }
-.component-index-name {
+.component-index-item__name {
   @include carbon--type-style('heading-01');
   color: $text-01;
   font-size: 14px;
@@ -64,19 +62,19 @@
   }
 }
 
-.component-index-description {
+.component-index-item__description {
   @include carbon--type-style('body-short-01');
   color: $text-01;
   font-size: 14px;
   font-weight: 400px;
-  padding: 0 1rem 1rem 1rem;
+  padding: 0 3rem 1rem 1rem;
   overflow: hidden;
   max-height: 3.5em; /* (Number of lines you want visible) * (line-height) */
   line-height: 1.2em;
   @include trim(3);
 }
 
-.links-row {
+.component-index-item__info {
   @include carbon--type-style('body-short-01');
   color: $link-01;
   display: flex;
@@ -86,12 +84,12 @@
   bottom: $spacing-05;
   padding: 0 1rem 0 1rem;
 }
-.link-website {
+.component-index-item__web-link {
   padding-right: $spacing-05;
   border-right: 1px solid $carbon--gray-20;
   cursor: pointer;
 }
-.link-storybook {
+.component-index-item__storybook-link {
   padding-left: $spacing-05;
   cursor: pointer;
 }
@@ -103,10 +101,10 @@
   .placeholder-sort {
     width: 100%;
   }
-  .component-image-card {
+  .component-index-item__image {
     display: none;
   }
-  .row {
+  .component-index-item {
     width: 100%;
     height: 11.175rem;
   }
