--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -93,3 +93,20 @@
   background-color: $ui-03;
   margin: 0 $spacing-05;
 }
+
+//----------------------------------------------------------------------------
+// Component Index Not Found
+//----------------------------------------------------------------------------
+.component-index-not-found__title {
+  @include carbon--type-style('productive-heading-04');
+
+  color: $text-01;
+  margin-bottom: $spacing-06;
+}
+
+.component-index-not-found__text {
+  @include carbon--type-style('body-long-02');
+
+  color: $text-01;
+  margin-bottom: $spacing-06;
+}
