update some styles

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -20,6 +20,7 @@
 
 .component-index-sort {
   background-color: $white-0;
+  height: 40px;
 }
 
 //----------------------------------------------------------------------------
@@ -33,6 +34,7 @@
 .component-index-item .component-index-item__image,
 .component-index-item .component-index-item__content {
   background-color: $white-0;
+  height: 180px;
 }
 
 // Image
@@ -40,7 +42,9 @@
   display: none;
 
   @include carbon--breakpoint(md) {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: 1px;
     // TODO: replace with appropriate aspect ratio handling
     width: 238px;
@@ -56,12 +60,13 @@
 // Description
 .component-index-item__description {
   @include carbon--type-style('body-short-01');
+  padding-right: 1rem;
   color: $text-01;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
   overflow: hidden;
-  margin-bottom: $spacing-07;
 }
 
 // Content
@@ -76,8 +81,8 @@
 
   flex: 1 1 0%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between
 }
 
 // Links
@@ -88,10 +93,15 @@
 
 // Divider
 .component-index-item__divider {
-  width: 2px;
+  width: 1px;
   height: 1rem;
   background-color: $ui-03;
   margin: 0 $spacing-05;
+}
+
+.component-index-item__tag--maintainer {
+  @include carbon--type-style('body-short-01');
+  color: $text-01;
 }
 
 //----------------------------------------------------------------------------
