--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -28,6 +28,7 @@
 //----------------------------------------------------------------------------
 .component-index-item {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 1px;
 }
 
@@ -60,7 +61,7 @@
 // Description
 .component-index-item__description {
   @include carbon--type-style('body-short-01');
-  padding-right: 1rem;
+  padding-right: 3rem;
   color: $text-01;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -72,17 +73,18 @@
 // Content
 .component-index-item__content {
   padding: 1rem;
-  flex: 1 1 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 // Info
 .component-index-item__info {
   @include carbon--type-style('body-short-01');
 
-  flex: 1 1 0%;
+  margin-top: auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 // Links
@@ -99,9 +101,27 @@
   margin: 0 $spacing-05;
 }
 
+// Info Tags
+.component-index-item__tags {
+  display: flex;
+  align-items: center;
+}
+
+.component-index-item__tag--framework {
+  padding-right: 4px;
+}
+
+.component-index-item__tag--design-asset {
+  padding-right: 4px;
+}
+
 .component-index-item__tag--maintainer {
   @include carbon--type-style('body-short-01');
   color: $text-01;
+}
+
+.component-index-item__tags li {
+  display: inline-block;
 }
 
 //----------------------------------------------------------------------------
