feat(component-index): updated px to rem styles

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -20,7 +20,7 @@
 
 .component-index-sort {
   background-color: $white-0;
-  height: 40px;
+  height: 2.5rem;
 }
 
 //----------------------------------------------------------------------------
@@ -35,7 +35,7 @@
 .component-index-item .component-index-item__image,
 .component-index-item .component-index-item__content {
   background-color: $white-0;
-  height: 180px;
+  height: 11.25rem;
 }
 
 // Image
@@ -108,11 +108,11 @@
 }
 
 .component-index-item__tag--framework {
-  padding-right: 4px;
+  padding-right: $spacing-02;
 }
 
 .component-index-item__tag--design-asset {
-  padding-right: 4px;
+  padding-right: $spacing-02;
 }
 
 .component-index-item__tag--maintainer {
