fix: update switcher styles

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -47,9 +47,24 @@
   border-radius: 0;
 }
 
+.palette-switcher .bx--content-switcher-btn:focus {
+  outline: 1px solid $inverse-focus-ui;
+  box-shadow: none;
+  outline-offset: -4px;
+}
+
+.palette-switcher .bx--content-switcher-btn {
+  border-radius: 0;
+}
+
 .palette-switcher
   .bx--content-switcher-btn:not(.bx--content-switcher--selected) {
-  background-color: var(--cds-inverse-01, #ffffff); // need to fix hover on this
+  background-color: $inverse-01;
+}
+
+.palette-switcher
+  .bx--content-switcher-btn:not(.bx--content-switcher--selected):hover {
+  background-color: $hover-ui;
 }
 
 // COLORS CONTAINER
@@ -85,17 +100,24 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 0.5rem 0 1rem;
-}
-
-.color-palette-color div {
-  display: flex;
-  align-items: center;
+  padding: 0 1rem;
 }
 
 .light-text {
   color: $text-04;
 }
+
+// .color-name {
+//   overflow: hidden;
+//   white-space: nowrap;
+//   text-overflow: ellipsis;
+//   @media (max-width: "1170px") {
+//     max-width: 100px;
+//   }
+//   @media (max-width: "1056px") {
+//     max-width: 100%;
+//   }
+// }
 
 // DARK MODE
 .dark-mode .color-palette-color {
