feat(index): add images to component inde xlist

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -52,6 +52,14 @@
   }
 }
 
+@include carbon--breakpoint(md) {
+  .index-image {
+    // Setting this class to 100% width seems to make Gatsby's fluid
+    // images work as expected. Otherwise, they're 0px wide
+    width: 100%;
+  }
+}
+
 // Name
 .component-index-item__name {
   @include carbon--type-style('heading-01');
