fix: grid styles

--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -210,6 +210,11 @@
   padding-left: 0.0625rem;
 }
 
+.bx-demo--grid--narrow .bx-demo--col,
+.bx-demo--row--narrow .bx-demo--col {
+  padding-left: 0;
+}
+
 //---------------------------------------
 // Grid modes section
 //---------------------------------------
