--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -72,11 +72,11 @@
   column-gap: 1px;
   row-gap: 1px;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down("lg") {
     grid-template-columns: 1fr 1fr;
   }
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down("md") {
     grid-template-columns: 1fr;
   }
 }
@@ -85,7 +85,7 @@
   width: 66.66%;
   grid-template-columns: 1fr 1fr;
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down("md") {
     width: 100%;
     grid-template-columns: 1fr;
   }
@@ -158,20 +158,20 @@
   left: -1px;
   background-color: $ui-03;
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down("md") {
     display: none; //all indiv rows, so don't need a left "border"
   }
 }
 
 .group-container + .group-container:nth-child(4) .group-option::before {
-  @include carbon--breakpoint-up("md") {
+  @include carbon--breakpoint-up("lg") {
     display: none; //4 starts a new row, so it doesn't need a left "border"
   }
 }
 
 .group-container + .group-container:nth-child(3) .group-option::before,
 .group-container + .group-container:nth-child(5) .group-option::before {
-  @include carbon--breakpoint-between("sm", "md") {
+  @include carbon--breakpoint-between("md", "lg") {
     display: none; // 3/5 start a new row, so it don't need a left "border"
   }
 }
@@ -190,11 +190,11 @@
   grid-template-columns: 1fr 1fr;
   width: 66.66%;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down("lg") {
     width: 100%;
   }
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down("md") {
     grid-template-columns: 1fr;
   }
 }
@@ -220,7 +220,7 @@
   left: -1px;
   background-color: $ui-03;
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down("md") {
     display: none; //all indiv rows, so don't need a left "border"
   }
 }
