fix: black color token, type, switcher text color

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -43,6 +43,11 @@
 
 .palette-switcher .bx--content-switcher-btn {
   border-radius: 0;
+  color: $text-01;
+}
+
+.palette-switcher .bx--content-switcher--selected {
+  color: $text-04;
 }
 
 .palette-switcher .bx--content-switcher-btn:focus {
@@ -94,7 +99,7 @@
 // COLOR
 .color-palette-color {
   height: 3rem;
-  font-family: "IBM Plex Mono";
+  @include carbon--type-style("code-02");
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -107,21 +112,21 @@
 
 // DARK MODE
 .dark-mode .color-palette-color {
-  outline: 1px solid black;
+  outline: 1px solid $ui-05;
 }
 
 .dark-mode .group-container {
-  background-color: black;
-  outline: 1px solid black;
+  background-color: $ui-05;
+  outline: 1px solid $ui-05;
 }
 
 .dark-mode .group-container .color-palette-color {
   outline: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $ui-05;
 }
 
 .dark-mode .group-option {
-  background: black;
+  background: $ui-05;
   color: var(--cds-inverse-01, #ffffff);
 }
 
@@ -206,7 +211,7 @@
 }
 
 .sequential:last-of-type {
-  border-left: 1px solid white;
+  border-left: 1px solid $ui-02;
 }
 
 .sequential-container
