fix: tablet/mobile margin

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -1,3 +1,10 @@
+// MAIN CONTAINER
+.color-palette-wrapper {
+  @include carbon--breakpoint-down("md") {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+}
 // DROPDOWN
 .palette-controls {
   display: grid;
