--- a/src/components/TypeScaleTable/type-scale-table.scss
+++ b/src/components/TypeScaleTable/type-scale-table.scss
@@ -1,7 +1,14 @@
 $type-scale: 0.75rem, 0.875rem, 1rem, 1.125rem, 1.25rem, 1.5rem, 1.75rem, 2rem,
   2.25rem, 2.625rem, 3rem, 3.375rem, 3.75rem, 4.25rem, 4.75rem, 5.25rem, 5.75rem;
 
-.typography-table {
+@include carbon--breakpoint-down('lg') {
+  .type-scale-table {
+    overflow-x: scroll;
+  }
+}
+
+.type-scale-table {
+  overflow-x: auto;
   background: $ui-02;
   border-bottom: rem(1px) solid $ui-03;
 
@@ -23,6 +30,7 @@ $type-scale: 0.75rem, 0.875rem, 1rem, 1.125rem, 1.25rem, 1.5rem, 1.75rem, 2rem,
     padding-bottom: auto;
     color: $text-01;
     vertical-align: top;
+    padding-right: 1rem;
   }
 
   table tbody td:first-child {
@@ -48,7 +56,6 @@ $type-scale: 0.75rem, 0.875rem, 1rem, 1.125rem, 1.25rem, 1.5rem, 1.75rem, 2rem,
       white-space: nowrap;
       width: 100%;
       line-height: 70%;
-      padding-right: 0;
     }
   }
 
