feat(component-index): 1555-component-index-filter-ui-functionality - soft launch preview

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -4,16 +4,13 @@
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
-
 //----------------------------------------------------------------------------
-// Component Index Search
+// Component Index Container
 //----------------------------------------------------------------------------
-.component-index-container.bx--col-sm-4, 
-.component-index-container.bx--col-md-6, 
-.component-index-container.bx--col-lg-9 {
-  padding-right: 0;
-  padding-left: 0;
+.component-index-container .bx--no-gutter--start {
+  width: 100%;
 }
+
 //----------------------------------------------------------------------------
 // Component Index Search
 //----------------------------------------------------------------------------
@@ -174,6 +171,7 @@
 //----------------------------------------------------------------------------
 .component-index-filter-container {
   margin-top: 12.5rem;
+  padding-left: $spacing-07;
 }
 // Header
 .component-index-filter__header {
