Prevent safari from zooming in on mobile
This occurs whenever the font size is less than 1rem.

--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -54,6 +54,8 @@
 
 .filter-row :global(.bx--search-input) {
   border-bottom: 1px solid $ui-03;
+  font-size: 1rem;
+  line-height: inherit;
   @include carbon--breakpoint('md') {
     border-bottom: none;
   }
