feat(component-index): 1555-component-index-filter-ui-functionality - soft launch

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -166,6 +166,13 @@
   margin-bottom: $spacing-06;
 }
 
+.component-index-not-found__link {
+  @include carbon--type-style('body-long-02');
+
+  margin-bottom: $spacing-06;
+  padding: 0 $spacing-02 0 $spacing-02;
+}
+
 //----------------------------------------------------------------------------
 // Component Index Filter
 //----------------------------------------------------------------------------
