feat(component-index): redirect, and css updates

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -198,7 +198,7 @@
   font-size: 0.875rem;
   line-height: 1.125rem;
   letter-spacing: 0.16px;
-  color: #525252;
+  color: $carbon--gray-70;
   font-weight: 400;
   vertical-align: initial
 }
