--- a/src/components/TypeScaleTable/type-scale-table.scss
+++ b/src/components/TypeScaleTable/type-scale-table.scss
@@ -11,6 +11,10 @@ $type-scale: 0.75rem, 0.875rem, 1rem, 1.125rem, 1.25rem, 1.5rem, 1.75rem, 2rem,
   --space: 0;
 }
 
+.type-scale-row + * {
+  --space: 0; 
+}
+
 .type-scale-table {
   overflow-x: auto;
   background: $ui-02;
